<resources>
    <string name="app_name">Powason</string>
    <string name="website_favicon">Website favicon</string>
    <string name="add_sample_data">Load data from disk</string>
    <string name="delete_all_listings">Delete all listings</string>
    <string name="add_login_entry">Add login entry</string>
    <string name="enter_title_here">Title <font color='#f5767a'>*</font></string>
    <string name="submit">Submit</string>
    <string name="enter_email_address_username">Email or Username</string>
    <string name="enter_password">Password</string>
    <string name="enter_website_url_required">Website Address <font color='#f5767a'>*</font></string>
    <string name="note">Note…</string>
    <string name="delete_this_account">Delete this account</string>
    <string name="generate_password">Generate Password</string>
    <string name="generate_new_password">Generate new password</string>
    <string name="check_for_breaches">Check all data for breaches</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_for_email_breaches">Check for email breaches</string>
    <string name="check_for_password_breaches">Check for password breaches</string>
    <string name="sync_with_server">Sync with server</string>
</resources>