<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all_listings" />
    <item
        android:id="@+id/action_sample_data"
        android:title="@string/add_sample_data" />
    <item
        android:id="@+id/action_sync_data"
        android:title="@string/sync_with_server" />
    <item
        android:id="@+id/action_check_emails"
        android:title="@string/check_for_email_breaches" />
    <item
        android:id="@+id/action_check_passwords"
        android:title="@string/check_for_password_breaches" />
    <item
        android:id="@+id/action_check_security"
        android:title="@string/check_for_breaches" />

</menu>